# Nautilus-Proto

./: .gitignore  Cargo.toml  README.md
core/: .gitignore  Cargo.toml
core/benches/: peer_management_benchmark.rs
core/src/: lib.rs  record.rs  transport.rs
core/src/record/: peer_management.rs  peer_record.rs
core/src/transport/: tcp_transport.rs  udp_transport.rs
core/tests/: peer_management_test.rs
discovery/: Cargo.toml
discovery/benches/: mdns_benchmark.rs
discovery/src/: discovery.rs  lib.rs  log_config.rs  mdns.rs  ssdp.rs
discovery/src/mdns/: name.rs  packet.rs  record.rs
discovery/tests/: mdns_testing_service.rs
identity/: .gitignore  Cargo.toml  build.rs
identity/protocols/: cEP.proto
identity/protocols/cEP/: README.md
identity/src/: cEP.rs  cep_error.rs  identity.rs  keypair.rs  lib.rs  peer_id.rs
identity/src/keypair/: rsa_keypair.rs
identity/src/peer_id/: hash.rs  uuid.rs
identity/tests/: cep_test.rs  rsa_keypair_test.rs
logger/: .gitignore  Cargo.toml
logger/src/: config.rs  lib.rs  logger.rs  macros.rs
src/: main.rs
