[package]
name = "Nautilus_Core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.11"



[build-dependencies]
prost-build = "0.11"


[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_futures"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dependencies.identity]
path = "../identity"
optional = true

[features]
default = []
identity_integration = ["identity"]