[package]
name = "nautilus-discovery"
version = "0.1.0"
edition = "2021"
description = "This is the discovery module responsible for performing user discovery for decentralized networks"
license = "MIT OR Apache-2.0"
keywords = ["decentralization","prototype","Peer-2-Peer"]

[dependencies]
rand = "0.8.0"
tokio = {version = "1.0",features = ["full"]}
bytes = "1.8.0"
chrono = "0.4.30"
logger = { path = "../logger", optional = true }  


[dev-dependencies]
criterion = "0.5.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"


[features]
default = []  # No default features
logging = ["logger"]
