[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt","time"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.0"
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }